# test

./: .env.example  README.md  pyproject.toml  requirements.txt  technical_specification_ru.md
bot/: __init__.py  config.py  main.py
bot/db/: session.py
bot/handlers/: commands.py  common.py  states.py
bot/keyboards/: approve.py  main.py
bot/models/: __init__.py  entities.py  enums.py
bot/repositories/: __init__.py  finance_repo.py  settings_repo.py  user_repo.py
bot/services/: bootstrap.py  business_rules.py  reporting.py  scheduler.py
bot/utils/: dates.py  formatting.py
config/: sources.example.yaml
src/tz_pipeline/: __init__.py  cli.py  collectors.py  document_builder.py  processing.py
tests/: test_bootstrap.py  test_business_rules.py  test_config.py
