[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tz-pipeline"
version = "0.1.0"
description = "Data collection/processing and DOCX formatter for power load forecasting TZ"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "requests>=2.31",
  "python-docx>=1.1",
  "PyYAML>=6.0",
]

[project.scripts]
tz-pipeline = "tz_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
